<resources>
    <!-- BAR CODE -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>


    <string name="app_name">Vegan App</string>
    <string name="activity_main_facebook_login_button">Facebook</string>
    <string name="activity_main_google_login_button">Google</string>
    <string name="activity_main_username_hint">username</string>
    <string name="activity_main_password_hint">password</string>
    <string name="activity_main_login_button">Login</string>
    <string name="activity_main_barcode_button">Barcode</string>
    <string name="activity_welcome_step1">Bem vindo \nao nosso app!</string>
    <string name="activity_welcome_step2">Fizemos o app para simplificar a sua vida vegana!</string>
    <string name="activity_welcome_step3">Ache as informações de produtos utilizando o código de barras ou usando as ferramentas de busca</string>
    <string name="activity_welcome_step4">Não encontrou um produto?\n Envie as informações para a gente!</string>
    <string name="activity_welcome_step5_header">Indique abaixo as suas <b>restrições alimentares</b>. Elas serão aplicadas\n quando você fizer uma busca</string>
    <string name="activity_welcome_next">Next</string>
    <string name="activity_welcome_back">Back</string>
    <string name="activity_welcome_step5_meat">Carne</string>
    <string name="activity_welcome_step5_egg">Ovo</string>
    <string name="activity_welcome_step5_milk">Leite</string>
    <string name="activity_welcome_step5_honey">Mel</string>
    <string name="activity_welcome_step5_gluten">Glútem</string>
    <string name="activity_welcome_step5_organic">Produto Orgânico</string>
    <string name="activity_welcome_step5_start">Começar a usar</string>

    <string name="activity_main_search_hint">Busca</string>
    <string name="activity_main_search_language">pt</string>
    <string name="activity_main_search_by_company">Procurar por empresas</string>
    <string name="activity_main_search_by_product_type">Procurar por Tipo de Produto</string>
    <string name="activity_main_search_for_food_products">Alimentos</string>
    <string name="activity_main_search_for_hygiene_products">Higiene</string>
    <string name="activity_main_search_for_cleaning_products">Limpeza</string>
    <string name="activity_main_scan_barcode">Escanear código de barras</string>
    <string name="activity_main_search">Busca</string>
    <string name="activity_main_history">Recentes</string>
    <string name="activity_main_about">Sobre</string>

    <string name="activity_barcode_scanner_both_camera_permission_message">Você deve aceitar ambas as permissões</string>
    <string name="activity_barcode_scanner_ok">OK</string>
    <string name="activity_barcode_scanner_cancel">Cancelar</string>
</resources>
