<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.upversionlab.veganapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="60dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_main_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_main_username_hint"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/activity_main_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_main_password_hint"
            android:inputType="textPassword"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/activity_main_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_login_button"
            android:layout_marginBottom="8dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/activity_main_facebook_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_facebook_login_button"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/activity_main_google_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_google_login_button"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/activity_main_barcode_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_barcode_button"/>

    </LinearLayout>

</RelativeLayout>
