<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.upversionlab.veganapp.welcome.WelcomeActivity">

    <TextView
        android:id="@+id/activity_welcome_step1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_welcome_step1"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginRight="50dp"
        android:layout_centerInParent="true"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/activity_welcome_step2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_welcome_step2"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginRight="50dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/activity_welcome_step3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_welcome_step3"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginRight="50dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/activity_welcome_step4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_welcome_step4"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginRight="50dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/activity_welcome_step5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="10dip"
        android:visibility="invisible" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_welcome_step5_header"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_welcome_step5_meat"/>

            <Switch
                android:id="@+id/activity_welcome_meat_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_welcome_step5_egg"/>

            <Switch
                android:id="@+id/activity_welcome_egg_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_welcome_step5_milk"/>

            <Switch
                android:id="@+id/activity_welcome_milk_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_welcome_step5_honey"/>

            <Switch
                android:id="@+id/activity_welcome_honey_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_welcome_step5_gluten"/>

            <Switch
                android:id="@+id/activity_welcome_gluten_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_welcome_step5_organic"/>

            <Switch
                android:id="@+id/activity_welcome_organic_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/activity_welcome_start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_welcome_step5_start"/>

    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_welcome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/activity_welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_welcome_back"
            android:layout_gravity="start"
            android:visibility="invisible" />

        <Button
            android:id="@+id/activity_welcome_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_welcome_next"
            android:layout_gravity="end"/>
    </android.support.v7.widget.Toolbar>

</RelativeLayout>
